// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`proposalVotes votes for a proposal ID 1`] = `
Object {
  "proposalVotes": Object {
    "__typename": "ProposalVotesConnection",
    "nodes": Array [],
    "totalCount": 0,
  },
}
`;

exports[`proposals get by id 1`] = `
Object {
  "proposal": null,
}
`;

exports[`proposals without filters 1`] = `
Object {
  "proposals": Object {
    "__typename": "ProposalsConnection",
    "nodes": Array [],
    "totalCount": 0,
  },
}
`;
